[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aqsc"
description = "Constructs QS stellarator equilibrium to all orders."
readme = "README.MD"
version = "0.1.5"
dependencies = ["numpy", "matplotlib", "jax", "interpax", "scipy"]
authors = [
  { name="Lanke Fu", email="ffu@pppl.gov" },
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/lankef/pyAQSC"